# AnonChat

./: .gitignore  README.md  pyproject.toml
AnonChat-main/: pyproject.toml
AnonChat-main/Client/: key.py  key_window.py  main.py
AnonChat-main/Server/peers/: tables.py
AnonChat/Client/: key_window.py
Client/: enc_dec_msg.py  key.py  key_window.py  main.py  main_GUI.py
Server/: server.py
Server/peers/: tables.py
