[project]
name = "anonchat"
version = "1.1.0"
description = "A simple and anonymous chat application written in Python3 using sockets"
authors = [
    {name = "m3t4wdd"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
